Revert "Keeping Sonar happy"
This reverts commit 7a0e227e87c897d487884f36645d03c9905f30c5.