@@ -172,10 +172,10 @@ class BreakpointManager {
         // Add new breakpoints.
         final List<Integer> magikBreakpointLines = breakpoints.stream()
             .map(MagikBreakpoint::getMethodLine)
-            .toList();
+            .collect(Collectors.toList());
         final List<SourceBreakpoint> addedBreakpoints = Arrays.stream(newSourceBreakpoints)
             .filter(breakpoint -> !magikBreakpointLines.contains(breakpoint.getLine()))
-            .toList();
+            .collect(Collectors.toList());
         for (final SourceBreakpoint sourceBreakpoint : addedBreakpoints) {
             this.addBreakpoint(source, sourceBreakpoint);
         }
@@ -183,10 +183,10 @@ class BreakpointManager {
         // Remove old breakpoints.
         final List<Integer> sourceBreakpointLines = Arrays.stream(newSourceBreakpoints)
             .map(SourceBreakpoint::getLine)
-            .toList();
+            .collect(Collectors.toList());
         final List<MagikBreakpoint> removedBreakpoints = breakpoints.stream()
             .filter(magikBreakpoint -> !sourceBreakpointLines.contains(magikBreakpoint.getMethodLine()))
-            .toList();
+            .collect(Collectors.toList());
         for (final MagikBreakpoint magikBreakpoint : removedBreakpoints) {
             this.removeBreakpoint(source, magikBreakpoint);
         }
@@ -444,8 +444,9 @@ class BreakpointManager {
             magikBreakpoint.setBreakpointId(breakpointId);
         } catch (ExecutionException exception) {
             final Throwable cause = exception.getCause();
-            if (cause instanceof final SlapErrorException slapErrorException) {
+            if (cause instanceof SlapErrorException) {
                 // Do nothing, verified will become false, error will be shown to user.
+                final SlapErrorException slapErrorException = (SlapErrorException) cause;
                 final String message = slapErrorException.getError().getErrorMessage().name();
                 magikBreakpoint.setMessage(message);
             } else {
