@@ -12,6 +12,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.analysis.typing.ITypeKeeper;
 import nl.ramsolutions.sw.magik.analysis.typing.TypeKeeper;
 import nl.ramsolutions.sw.magik.analysis.typing.types.AbstractType;
@@ -77,7 +78,7 @@ public final class JsonTypeKeeperWriter {
                 instruction.put(InstPackage.NAME.getValue(), pakkage.getName());
                 final List<String> pakkageUses = pakkage.getUses().stream()
                     .map(Package::getName)
-                    .toList();
+                    .collect(Collectors.toList());
                 instruction.put(InstPackage.USES.getValue(), pakkageUses);
                 this.writeInstruction(writer, instruction);
             });
@@ -93,7 +94,7 @@ public final class JsonTypeKeeperWriter {
                 final List<String> parents = type.getParents().stream()
                     .map(AbstractType::getFullName)
                     .sorted()
-                    .toList();
+                    .collect(Collectors.toList());
                 final List<JSONObject> slots = type.getSlots().stream()
                     .sorted(slotNameComparer)
                     .map(slot -> {
@@ -102,10 +103,11 @@ public final class JsonTypeKeeperWriter {
                         slotObject.put(InstType.SLOT_TYPE_NAME.getValue(), slot.getType().getFullString());
                         return slotObject;
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
                 final List<JSONObject> generics;
-                if (type instanceof final MagikType magikType) {
+                if (type instanceof MagikType) {
+                    final MagikType magikType = (MagikType) type;
                     generics = magikType.getGenerics().stream()
                         .map(generic -> {
                             final JSONObject genericObject = new JSONObject();
@@ -113,7 +115,7 @@ public final class JsonTypeKeeperWriter {
                             genericObject.put(InstType.GENERIC_DOC.getValue(), generic.getDoc());
                             return genericObject;
                         })
-                        .toList();
+                    .collect(Collectors.toList());
                 } else {
                     generics = Collections.emptyList();
                 }
@@ -178,7 +180,7 @@ public final class JsonTypeKeeperWriter {
                         parameterObject.put(InstParameter.TYPE_NAME.getValue(), parameter.getType().getFullString());
                         return parameterObject;
                     })
-                    .toList();
+                    .collect(Collectors.toList());
                 final Path sourceFile = method.getLocation() != null
                     ? method.getLocation().getPath()
                     : null;
@@ -225,7 +227,7 @@ public final class JsonTypeKeeperWriter {
                         parameterObject.put(InstParameter.TYPE_NAME.getValue(), parameter.getType().getFullString());
                         return parameterObject;
                     })
-                    .toList();
+                    .collect(Collectors.toList());
                 final Path sourceFile = invokeMethod.getLocation() != null
                     ? procedure.getLocation().getPath()
                     : null;
