@@ -2,6 +2,7 @@ package nl.ramsolutions.sw.magik.typedchecks.checks;
 
 import com.sonar.sslr.api.AstNode;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import nl.ramsolutions.sw.magik.analysis.helpers.MethodInvocationNodeHelper;
 import nl.ramsolutions.sw.magik.analysis.typing.LocalTypeReasoner;
@@ -41,11 +42,11 @@ public class MethodArgumentParameterTypedCheck extends MagikTypedCheck {
         // Get types for arguments.
         final LocalTypeReasoner reasoner = this.getReasoner();
         final List<AstNode> argumentNodes = argumentsNode.getChildren(MagikGrammar.ARGUMENT).stream()
-            .toList();
+            .collect(Collectors.toList());
         final List<ExpressionResult> argumentTypes = argumentNodes.stream()
             .map(argumentNode -> argumentNode.getFirstChild(MagikGrammar.EXPRESSION))
             .map(reasoner::getNodeType)
-            .toList();
+            .collect(Collectors.toList());
 
         // Get methods.
         final MethodInvocationNodeHelper helper = new MethodInvocationNodeHelper(node);
@@ -69,7 +70,7 @@ public class MethodArgumentParameterTypedCheck extends MagikTypedCheck {
                     }
                     return type;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
             // Test parameter type against argument type.
             final int size = Math.min(parameterTypes.size(), argumentTypes.size());
